added  TabItem  into  TabControl in  MainWindow.

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -194,6 +194,9 @@
 
                 </Grid>
             </TabItem>
+            <TabItem x:Name="tabItem004" Header="Справочник мобильных телефонов">
+
+            </TabItem>
         </TabControl>
 
     </Grid>
