--- a/PageDataGrid001.xaml
+++ b/PageDataGrid001.xaml
@@ -11,10 +11,10 @@
     <DockPanel>
         <ToolBar DockPanel.Dock="Top">
             <StackPanel Orientation="Horizontal">
-                <Button Padding="7,2,3,2">Показать</Button>
-                <Button Padding="3,2,3,2">Новая</Button>
-                <Button Padding="3,2,3,2">Изменить</Button>
-                <Button Padding="3,2,7,2">Удалить</Button>
+                <Button x:Name="btnShowAll" Padding="7,2,3,2">Показать</Button>
+                <Button x:Name="btnNewRecord" Padding="3,2,3,2">Новая</Button>
+                <Button x:Name="btnEditRecord" Padding="3,2,3,2">Изменить</Button>
+                <Button x:Name="btnDeleteRecords" Padding="3,2,7,2">Удалить</Button>
 
             </StackPanel>
 
