--- a/PageDataGrid001.xaml
+++ b/PageDataGrid001.xaml
@@ -2,7 +2,8 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:dgx="clr-namespace:DataGridExtensions;assembly=DataGridExtensions"
       xmlns:local="clr-namespace:WpfToyDataForms"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
@@ -19,7 +20,7 @@
             </StackPanel>
 
         </ToolBar>
-        <DataGrid x:Name="_innerDataGrid" Background="#FFF1ECEC" RowBackground="#FFF5F6F7" AlternatingRowBackground="#FFE6E6E6" DockPanel.Dock="Top">
+        <DataGrid x:Name="_innerDataGrid" Background="#FFF1ECEC" RowBackground="#FFF5F6F7" AlternatingRowBackground="#FFE6E6E6" AutoGenerateColumns="False" MinRowHeight="22" DockPanel.Dock="Top">
 
         </DataGrid>
     </DockPanel>
