--- a/PageDataGrid001.xaml
+++ b/PageDataGrid001.xaml
@@ -1,28 +1,30 @@
-﻿<Page x:Class="WpfToyDataForms.PageDataGrid001"
+﻿<Page
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:dgx="clr-namespace:DataGridExtensions;assembly=DataGridExtensions"
       xmlns:local="clr-namespace:WpfToyDataForms"
+      x:Class="WpfToyDataForms.PageDataGrid001"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="PageDataGrid001">
 
+
     <DockPanel>
+
+
         <ToolBar DockPanel.Dock="Top">
             <StackPanel Orientation="Horizontal">
-                <Button x:Name="btnShowAll" Padding="7,2,3,2">Показать</Button>
-                <Button x:Name="btnNewRecord" Padding="3,2,3,2">Новая</Button>
-                <Button x:Name="btnEditRecord" Padding="3,2,3,2">Изменить</Button>
-                <Button x:Name="btnDeleteRecords" Padding="3,2,7,2">Удалить</Button>
+                <Button x:Name="btnShowAll" Padding="7,2,3,2" Content="Показать"/>
+                <Button x:Name="btnNewRecord" Padding="3,2,3,2" Content="Новая"/>
+                <Button x:Name="btnEditRecord" Padding="3,2,3,2" Content="Изменить"/>
+                <Button x:Name="btnDeleteRecords" Padding="3,2,7,2" Content="Удалить"/>
 
             </StackPanel>
 
         </ToolBar>
-        <DataGrid x:Name="_innerDataGrid" Background="#FFF1ECEC" RowBackground="#FFF5F6F7" AlternatingRowBackground="#FFE6E6E6" AutoGenerateColumns="False" MinRowHeight="22" DockPanel.Dock="Top">
-
-        </DataGrid>
+        <DataGrid x:Name="_innerDataGrid" Background="#FFF1ECEC" RowBackground="#FFF5F6F7" AlternatingRowBackground="#FFE6E6E6" AutoGenerateColumns="False" MinRowHeight="22" DockPanel.Dock="Top"/>
     </DockPanel>
 
 </Page>
