--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -84,7 +84,7 @@
                 <MenuItem Header="Стационарн. телеф."/>
                 <MenuItem Header="МВЗ"/>
                 <MenuItem Header="Операторы связи"/>
-                <MenuItem x:Name="MenuItem_FormFor001VIDCONNECT" Header="Виды связи"/>
+                <MenuItem x:Name="MenuItem_FormFor001VIDCONNECT" Header="Виды связи" Click="MenuItem_FormFor001VIDCONNECT_Click"/>
                 <MenuItem Header="Услуги по стационарн. телеф."/>
                 <MenuItem Header="Кадры"/>
                 <MenuItem Header="Просмотр TEL_TMP"/>
@@ -159,7 +159,7 @@
                 </TabItem>
                 <TabItem x:Name="tabItem002" Header=" &lt;&lt; Справочник виды связи &gt;&gt;">
                     <StackPanel Background="#FFE5E5E5">
-                        <DataGrid  x:Name="dataGridSpr002" ItemsSource="{Binding}" dgx:DataGridFilter.IsAutoFilterEnabled="True" IsSynchronizedWithCurrentItem="True" AutoGenerateColumns="False" MinRowHeight="22">
+                        <DataGrid  x:Name="dataGridSpr002" ItemsSource="{Binding}" dgx:DataGridFilter.IsAutoFilterEnabled="True" IsSynchronizedWithCurrentItem="True" AutoGenerateColumns="False" MinRowHeight="22" BeginningEdit="dataGridSpr002_BeginningEdit" PreparingCellForEdit="dataGridSpr002_PreparingCellForEdit" CellEditEnding="dataGridSpr002_CellEditEnding">
                             <DataGrid.Resources>
                                 <ControlTemplate x:Key="{x:Static dgx:DataGridFilter.IconTemplateKey}">
                                     <Path Data="M0,0 L10,0 6,4 6,9 4,9 4,4 Z" Fill="Orange" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="2,0"/>
