--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -159,7 +159,7 @@
                 </TabItem>
                 <TabItem x:Name="tabItem002" Header=" &lt;&lt; Справочник виды связи &gt;&gt;">
                     <StackPanel Background="#FFE5E5E5">
-                        <DataGrid  x:Name="dataGridSpr002" ItemsSource="{Binding}" dgx:DataGridFilter.IsAutoFilterEnabled="True" IsSynchronizedWithCurrentItem="True" AutoGenerateColumns="False" MinRowHeight="22" BeginningEdit="dataGridSpr002_BeginningEdit" PreparingCellForEdit="dataGridSpr002_PreparingCellForEdit" CellEditEnding="dataGridSpr002_CellEditEnding">
+                        <DataGrid  x:Name="dataGridSpr002" ItemsSource="{Binding}" dgx:DataGridFilter.IsAutoFilterEnabled="True" IsSynchronizedWithCurrentItem="True" AutoGenerateColumns="False" MinRowHeight="22">
                             <DataGrid.Resources>
                                 <ControlTemplate x:Key="{x:Static dgx:DataGridFilter.IconTemplateKey}">
                                     <Path Data="M0,0 L10,0 6,4 6,9 4,9 4,4 Z" Fill="Orange" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="2,0"/>
@@ -208,7 +208,7 @@
                         </StatusBar>
                     </StackPanel>
                 </TabItem>
-                <TabItem x:Name="tabItem004" Header="Справочник мобильных телефонов">
+                <TabItem x:Name="tabItem004" Header="Справочник мобильных телефонов" AllowDrop="True">
                     <StackPanel Background="#FFE5E5E5">
                         <Frame x:Name="frmForContentToInsert" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
                             
