--- a/PageDataGrid001.xaml
+++ b/PageDataGrid001.xaml
@@ -22,7 +22,7 @@
     <DockPanel>
 
 
-        <ToolBar DockPanel.Dock="Top">
+        <ToolBar DockPanel.Dock="Top" Visibility="Hidden">
             <StackPanel Orientation="Horizontal">
                 <Button x:Name="btnShowAll" Padding="7,2,3,2" Content="Показать"/>
                 <Button x:Name="btnNewRecord" Padding="3,2,3,2" Content="Новая"/>
@@ -32,7 +32,28 @@
             </StackPanel>
 
         </ToolBar>
-        <DataGrid x:Name="_innerDataGrid" Background="#FFF1ECEC" RowBackground="#FFF5F6F7" AlternatingRowBackground="#FFE6E6E6" AutoGenerateColumns="False" MinRowHeight="22" DockPanel.Dock="Top"/>
+        <DataGrid x:Name="_innerDataGrid"   ItemsSource="{Binding}" dgx:DataGridFilter.IsAutoFilterEnabled="True" IsSynchronizedWithCurrentItem="True"  Background="#FFF1ECEC" RowBackground="#FFF5F6F7" AlternatingRowBackground="#FFE6E6E6" AutoGenerateColumns="False" MinRowHeight="22" DockPanel.Dock="Top">
+            <DataGrid.Resources>
+                <ControlTemplate x:Key="{x:Static dgx:DataGridFilter.IconTemplateKey}">
+                    <Path Data="M0,0 L10,0 6,4 6,9 4,9 4,4 Z" Fill="Orange" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="2,0"/>
+                </ControlTemplate>
+                <DataTemplate x:Key="CustomHeaderWithLeftAlignedSearch">
+                    <DockPanel>
+                        <!-- The control to host the filter UI for this column -->
+                        <dgx:DataGridFilterColumnControl DockPanel.Dock="Left"/>
+                        <ContentPresenter x:Name="PART_Content" Content="{Binding}"
+                                        SnapsToDevicePixels="{Binding SnapsToDevicePixels, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=DataGridColumnHeader}}"
+                                        HorizontalAlignment="{Binding HorizontalContentAlignment, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=DataGridColumnHeader}}"
+                                        VerticalAlignment="{Binding VerticalContentAlignment, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=DataGridColumnHeader}}"/>
+                    </DockPanel>
+                </DataTemplate>
+            </DataGrid.Resources>
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="ID" Binding="{Binding IDConnect}"/>
+                <DataGridTextColumn Header="Код" Binding="{Binding KodOfConnect}"/>
+                <DataGridTextColumn Header="Название" Binding="{Binding NameOfConnect}"/>
+            </DataGrid.Columns>
+        </DataGrid>
     </DockPanel>
 
 </Page>
