--- a/PageForFormSPR001VIDCONNECT.xaml
+++ b/PageForFormSPR001VIDCONNECT.xaml
@@ -32,7 +32,7 @@
             </StackPanel>
 
         </ToolBar>
-        <DataGrid x:Name="_innerDataGrid"   ItemsSource="{Binding}" dgx:DataGridFilter.IsAutoFilterEnabled="True" IsSynchronizedWithCurrentItem="True"  Background="#FFF1ECEC" RowBackground="#FFF5F6F7" AlternatingRowBackground="#FFE6E6E6" AutoGenerateColumns="False" MinRowHeight="22" DockPanel.Dock="Top" CellEditEnding="_innerDataGrid_CellEditEnding" BeginningEdit="_innerDataGrid_BeginningEdit" RowEditEnding="_innerDataGrid_RowEditEnding">
+        <DataGrid x:Name="_innerDataGrid" dgx:DataGridFilter.IsAutoFilterEnabled="True" IsSynchronizedWithCurrentItem="True"  Background="#FFF1ECEC" RowBackground="#FFF5F6F7" AlternatingRowBackground="#FFE6E6E6" AutoGenerateColumns="False" MinRowHeight="22" DockPanel.Dock="Top" CellEditEnding="_innerDataGrid_CellEditEnding" BeginningEdit="_innerDataGrid_BeginningEdit" RowEditEnding="_innerDataGrid_RowEditEnding">
             <DataGrid.Resources>
                 <ControlTemplate x:Key="{x:Static dgx:DataGridFilter.IconTemplateKey}">
                     <Path Data="M0,0 L10,0 6,4 6,9 4,9 4,4 Z" Fill="Orange" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="2,0"/>
@@ -52,6 +52,7 @@
                 <DataGridTextColumn Header="ID" Binding="{Binding IDConnect}"/>
                 <DataGridTextColumn Header="Код" Binding="{Binding KodOfConnect}"/>
                 <DataGridTextColumn Header="Название" Binding="{Binding NameOfConnect}"/>
+
             </DataGrid.Columns>
         </DataGrid>
     </DockPanel>
