--- a/PageForFormSPR001VIDCONNECT.xaml
+++ b/PageForFormSPR001VIDCONNECT.xaml
@@ -8,7 +8,7 @@
       x:Class="WpfToyDataForms.PageDataGrid001"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="PageDataGrid001">
+      Title="Справочник Виды связи">
 
     <Page.Resources>
         <dgx:RegexContentFilterFactory x:Key="RegexContentFilterFactory"/>
@@ -22,7 +22,7 @@
     <DockPanel>
 
 
-        <ToolBar DockPanel.Dock="Top" Visibility="Hidden">
+        <ToolBar x:Name="toolBarForForm001VIDCONNECT" DockPanel.Dock="Top" Visibility="Hidden">
             <StackPanel Orientation="Horizontal">
                 <Button x:Name="btnShowAll" Padding="7,2,3,2" Content="Показать"/>
                 <Button x:Name="btnNewRecord" Padding="3,2,3,2" Content="Новая"/>
