--- a/PageForFormSPR001VIDCONNECT.xaml
+++ b/PageForFormSPR001VIDCONNECT.xaml
@@ -27,7 +27,7 @@
                 <Button x:Name="btnShowAll" Padding="7,2,3,2" Content="Показать"/>
                 <Button x:Name="btnNewRecord" Padding="3,2,3,2" Content="Новая"/>
                 <Button x:Name="btnEditRecord" Padding="3,2,3,2" Content="Изменить" Visibility="Hidden"/>
-                <Button x:Name="btnSaveAll" Padding="7,2,3,2" Content="Сохранить" Visibility="Hidden"/>
+                <Button x:Name="btnSaveAll" Padding="7,2,3,2" Content="Сохранить" Visibility="Hidden" Click="btnSaveAll_Click"/>
                 <Button x:Name="btnDeleteRecords" Padding="3,2,7,2" Content="Удалить" Visibility="Hidden"/>
             </StackPanel>
 
