in class  PageForFormSPR001VIDCONNECT  continue edditing, so that buttons are all visible, however some of them aren`t avalable.

--- a/PageForFormSPR001VIDCONNECT.xaml
+++ b/PageForFormSPR001VIDCONNECT.xaml
@@ -26,9 +26,9 @@
             <StackPanel Orientation="Horizontal">
                 <Button x:Name="btnShowAll" Padding="7,2,3,2" Content="Показать"/>
                 <Button x:Name="btnNewRecord" Padding="3,2,3,2" Content="Новая"/>
-                <Button x:Name="btnEditRecord" Padding="3,2,3,2" Content="Изменить" Visibility="Hidden"/>
-                <Button x:Name="btnSaveAll" Padding="7,2,3,2" Content="Сохранить" Visibility="Hidden" Click="btnSaveAll_Click"/>
-                <Button x:Name="btnDeleteRecords" Padding="3,2,7,2" Content="Удалить" Visibility="Hidden"/>
+                <Button x:Name="btnEditRecord" Padding="3,2,3,2" Content="Изменить" IsEnabled="False"/>
+                <Button x:Name="btnSaveAll" Padding="7,2,3,2" Content="Сохранить" Click="btnSaveAll_Click" IsEnabled="False"/>
+                <Button x:Name="btnDeleteRecords" Padding="3,2,7,2" Content="Удалить" IsEnabled="False"/>
             </StackPanel>
 
         </ToolBar>
