--- a/PageForFormSPR001VIDCONNECT.xaml
+++ b/PageForFormSPR001VIDCONNECT.xaml
@@ -24,7 +24,7 @@
 
         <ToolBar  x:Uid="tlBar" DockPanel.Dock="Top">
             <StackPanel Orientation="Horizontal">
-                <Button x:Name="btnShowAll" Padding="7,2,3,2" Content="Показать"/>
+                <Button x:Name="btnShowAll" Padding="7,2,3,2" Content="Показать" Click="btnShowAll_Click"/>
                 <Button x:Name="btnNewRecord" Padding="3,2,3,2" Content="Новая"/>
                 <Button x:Name="btnEditRecord" Padding="3,2,3,2" Content="Изменить" IsEnabled="False"/>
                 <Button x:Name="btnSaveAll" Padding="7,2,3,2" Content="Сохранить" Click="btnSaveAll_Click" IsEnabled="False"/>
