--- a/PageForFormSPR001VIDCONNECT.xaml
+++ b/PageForFormSPR001VIDCONNECT.xaml
@@ -33,7 +33,7 @@
             </StackPanel>
 
         </ToolBar>
-        <DataGrid x:Name="_innerDataGrid" dgx:DataGridFilter.IsAutoFilterEnabled="True" IsSynchronizedWithCurrentItem="True"  Background="#FFF1ECEC" RowBackground="#FFF5F6F7" AlternatingRowBackground="#FFE6E6E6" AutoGenerateColumns="False" MinRowHeight="22" DockPanel.Dock="Top" CellEditEnding="_innerDataGrid_CellEditEnding" BeginningEdit="_innerDataGrid_BeginningEdit" RowEditEnding="_innerDataGrid_RowEditEnding" SelectionChanged="_innerDataGrid_SelectionChanged" Loaded="_innerDataGrid_Loaded" LostFocus="_innerDataGrid_LostFocus">
+        <DataGrid x:Name="_innerDataGrid" dgx:DataGridFilter.IsAutoFilterEnabled="True" IsSynchronizedWithCurrentItem="True"  Background="#FFF1ECEC" RowBackground="#FFF5F6F7" AlternatingRowBackground="#FFE6E6E6" AutoGenerateColumns="False" MinRowHeight="22" DockPanel.Dock="Top" CellEditEnding="_innerDataGrid_CellEditEnding" BeginningEdit="_innerDataGrid_BeginningEdit" RowEditEnding="_innerDataGrid_RowEditEnding" SelectionChanged="_innerDataGrid_SelectionChanged" Loaded="_innerDataGrid_Loaded" LostFocus="_innerDataGrid_LostFocus" ScrollViewer.CanContentScroll="True" SelectionUnit="Cell" SelectionMode="Single" CanUserAddRows="False" CanUserDeleteRows="False">
             <DataGrid.Resources>
                 <ControlTemplate x:Key="{x:Static dgx:DataGridFilter.IconTemplateKey}">
                     <Path Data="M0,0 L10,0 6,4 6,9 4,9 4,4 Z" Fill="Orange" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="2,0"/>
