--- a/PageForFormSPR001VIDCONNECT.xaml
+++ b/PageForFormSPR001VIDCONNECT.xaml
@@ -56,21 +56,21 @@
 
             </DataGrid.Columns>
         </DataGrid>
-        <Popup x:Name="popupRecordOperation" IsOpen="False" DockPanel.Dock="Bottom" IsEnabled="False" Visibility="Hidden" MaxHeight="42" OpacityMask="#FFF1ECEC">
-            <WrapPanel Orientation="Horizontal">
-                <Grid>
+        <Popup x:Name="popupRecordOperation" IsOpen="False" DockPanel.Dock="Bottom" IsEnabled="False" Visibility="Hidden" MaxHeight="82" OpacityMask="#FFF1ECEC" Placement="Bottom" VerticalOffset="5" UseLayoutRounding="False" Focusable="True">
+            <WrapPanel Orientation="Horizontal" HorizontalAlignment="Stretch">
+                <Grid Background="#FFDAD9D9">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="2*"/>
-                        <ColumnDefinition Width="10*"/>
-                        <ColumnDefinition Width="10*"/>
-                        <ColumnDefinition Width="10*"/>
-                        <ColumnDefinition Width="10*"/>
-                        <ColumnDefinition Width="10*"/>
-                        <ColumnDefinition Width="10*"/>
-                        <ColumnDefinition Width="10*"/>
-                        <ColumnDefinition Width="10*"/>
-                        <ColumnDefinition Width="10*"/>
-                        <ColumnDefinition Width="10*"/>
+                        <ColumnDefinition Width="20*"/>
+                        <ColumnDefinition Width="20*"/>
+                        <ColumnDefinition Width="20*"/>
+                        <ColumnDefinition Width="20*"/>
+                        <ColumnDefinition Width="20*"/>
+                        <ColumnDefinition Width="20*"/>
+                        <ColumnDefinition Width="20*"/>
+                        <ColumnDefinition Width="20*"/>
+                        <ColumnDefinition Width="15*"/>
+                        <ColumnDefinition Width="15*"/>
                         <ColumnDefinition Width="2*"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
@@ -80,16 +80,16 @@
                         <RowDefinition Height="2*"/>
                     </Grid.RowDefinitions>
 
-                    <Label Grid.Row="1" Grid.Column="1" Content="ID"/>
-                    <Label Grid.Row="1" Grid.Column="2" Content="Код"/>
-                    <Label Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="3" Content="Название"/>
+                    <Label Grid.Row="1" Grid.Column="1" HorizontalContentAlignment="Center" Margin="2,0,2,0" Padding="2,5,2,2">"ID"</Label>
+                    <Label Grid.Row="1" Grid.Column="2" HorizontalContentAlignment="Center" Margin="2,2,2,2" Padding="2,2,2,2">"Код"</Label>
+                    <Label Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="3" HorizontalContentAlignment="Center" Margin="2,2,2,2" Padding="2,2,5,2">"Название"</Label>
 
-                    <TextBox x:Name="txtBox__IDConnect" Grid.Row="2" Grid.Column="1"/>
-                    <TextBox x:Name="txtBox__KodOfConnect" Grid.Row="2" Grid.Column="2"/>
-                    <TextBox x:Name="txtBox__NameOfConnect" Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="3"/>
+                    <TextBox x:Name="txtBox__IDConnect" Grid.Row="2" Grid.Column="1" Margin="5,2,2,2" Padding="2,2,2,2"/>
+                    <TextBox x:Name="txtBox__KodOfConnect" Grid.Row="2" Grid.Column="2" Margin="2,2,2,2" Padding="2,2,2,2"/>
+                    <TextBox x:Name="txtBox__NameOfConnect" Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="3" Margin="2,2,5,2" Padding="2,1,2,2"/>
 
-                    <Button x:Name="btn_Ok_from_popupRecord" Grid.Column="9" Grid.Row="1" Grid.RowSpan="2"/>
-                    <Button x:Name="btn_Cancel_from_popupRecord" Grid.Column="10" Grid.Row="1" Grid.RowSpan="2" Click="btn_Cancel_from_popupRecord_Click"/>
+                    <Button x:Name="btn_Ok_from_popupRecord" Grid.Column="9" Grid.Row="1" Grid.RowSpan="2" FontSize="14" Padding="2,2,2,2">Ok Сохранить</Button>
+                    <Button x:Name="btn_Cancel_from_popupRecord" Grid.Column="10" Grid.Row="1" Grid.RowSpan="2" Click="btn_Cancel_from_popupRecord_Click" Padding="2,2,2,2">Cancel Отменить</Button>
                 </Grid>
             </WrapPanel>
         </Popup>
