in  'PageForFormSPR001VIDCONNECT'  added for button 'btnRemoveLastTab'  tip text.

--- a/PageForFormSPR001VIDCONNECT.xaml
+++ b/PageForFormSPR001VIDCONNECT.xaml
@@ -29,7 +29,7 @@
                 <Button x:Name="btnEditRecord" Padding="3,2,3,2" Content="Изменить" IsEnabled="False"/>
                 <Button x:Name="btnSaveAll" Padding="7,2,3,2" Content="Сохранить" Click="btnSaveAll_Click" IsEnabled="False"/>
                 <Button x:Name="btnDeleteRecords" Padding="3,2,3,2" Content="Удалить" IsEnabled="False" Click="btnDeleteRecords_Click"/>
-                <Button x:Name="btnRemoveLastTab" Padding="3,2,7,2" Content=" X " Click="btnRemoveLastTab_Click"/>
+                <Button x:Name="btnRemoveLastTab" Padding="3,2,7,2" Content=" X " Click="btnRemoveLastTab_Click" ToolTip="Закрыть вкадку"/>
             </StackPanel>
 
         </ToolBar>
